Added async api call function

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <section class="main__section-container">
     </section>
   </main>
-  <script src="./scripts/script.css"></script>
+  <script src="./scripts/script.js" type="module"></script>
 </body>
 </html>
