Started to work on a event-> keyUp

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
   <main class="main">
     <section class="main__section-container">
+      <input type="search" name="search-input" id="search" placeholder="Filter" class="main__filter-input">
+      <div class="main__display-items-container">
+      </div>
     </section>
   </main>
   <script src="./scripts/script.js" type="module"></script>
